@@ -24,6 +24,10 @@ public class NcbiPrep {
 
     public static void main(String[] args) throws Exception {
 
+        String fname = "/chi/GCF_000276665.1_ChiLan1.0_genomic.fna.gz";
+        String outDir = "/data/ref/fasta";
+        prepScaffolds(fname, outDir);
+
         //prepUthGff3Files();
         //loadUthPositions();
 
@@ -32,9 +36,6 @@ public class NcbiPrep {
 
         // for scaffold assemblies, prefix must be an empty string; for chromosome assemblies it must be 'Chr'
         final String chrPrefix = isScaffoldAssembly ? "" : "Chr";
-
-        String fname = "/Users/mtutaj/Downloads/GCF_014441545.1_ROS_Cfam_1.0_genomic.fna.gz";
-        String outDir = "/data/ref/fasta/ROS_Cfam_1.0";
 
         MapDAO dao = new MapDAO();
         List<Chromosome> chromosomes = dao.getChromosomes(mapKey);
@@ -73,6 +74,20 @@ public class NcbiPrep {
             out.close();
         }
         System.out.println("OK");
+    }
+
+    static void prepScaffolds(String fname, String outDir) throws IOException {
+
+        BufferedReader in = Utils.openReader(fname);
+        String outName = outDir +"/out.fa.gz";
+        BufferedWriter out = Utils.openWriter(outName);
+
+        String line;
+        while( (line = in.readLine())!=null ) {
+
+        }
+        in.close();
+        out.close();
     }
 
     static String getChrName(String acc, List<Chromosome> chromosomes, String chrPrefix) {
